syntax = "proto3";

option go_package = "core/proto/xctrl";

package xctrl;

/*
    subject:

    xswitch.node
    xswitch.node.<uuid>
    xswitch.ctrl
    xswitch.ctrl.<id>
*/

service XNode {
  // 外呼
  rpc Dial(DialRequest) returns (DialResponse) {}
  // 应答
  rpc Answer(Request) returns (Response) {}
  // 接管呼叫，示接管的呼叫将会在10s后挂断，其它所有API都隐含接管
  rpc Accept(AcceptRequest) returns (Response) {}
  // 播放一个文件或TTS
  rpc Play(PlayRequest) returns (Response) {}
  // 停止当前正在执行的API
  rpc Stop(StopRequest) returns (Response) {}
  // 广播
  rpc Broadcast(BroadcastRequest) returns (Response) {}
  // 设置静音
  rpc Mute(MuteRequest) returns (Response) {}
  // 录音
  rpc Record(RecordRequest) returns (RecordResponse) {}
  // 挂断当前UUID
  rpc Hangup(HangupRequest) returns (Response) {}
  // 在把当前呼叫桥接（发起）另一个呼叫
  rpc Bridge(BridgeRequest) returns (Response) {}
  // 桥接两个呼叫
  rpc ChannelBridge(ChannelBridgeRequest) returns (Response) {}
  // 将桥接的呼叫分开
  rpc UnBridge(Request) returns (Response) {}
  // 将桥接的呼叫分开
  rpc UnBridge2(Request) returns (Response) {}
  // 呼叫保持/取消保持
  rpc Hold(HoldRequest) returns (Response) {}
  // 转移（待定）
  rpc Transfer(TransferRequest) returns (Response) {}
  // 三方通话
  rpc ThreeWay(ThreeWayRequest) returns (Response) {}
  // 回声，说话者可以听到自己的声音
  rpc Echo2(Echo2Request) returns (Response) {}
  // 强插
  rpc Intercept(InterceptRequest) returns (Response) {}
  // 协商转移
  rpc Consult(ConsultRequest) returns (Response) {}
  // 设置通道变量
  rpc SetVar(SetVarRequest) returns (Response) {}
  // 获取通道变量
  rpc GetVar(GetVarRequest) returns (VarResponse) {}
  // 获取通道状态
  rpc GetState(GetStateRequest) returns (StateResponse) {}
  // 获取通道数据
  rpc GetChannelData(GetChannelDataRequest) returns (ChannelDataResponse) {}
  //  读取DTMF按键
  rpc ReadDTMF(DTMFRequest) returns (DTMFResponse) {}
  //  读取DTMF按键
  rpc ReadDigits(DigitsRequest) returns (DigitsResponse) {}
  // 语音识别
  rpc DetectSpeech(DetectRequest) returns (DetectResponse) {}
  // 停止语音识别
  rpc StopDetectSpeech(StopDetectRequest) returns (Response) {}
  // 回铃音检测
  rpc RingBackDetection(RingBackDetectionRequest) returns (Response) {}
  // 人脸识别
  rpc DetectFace(DetectFaceRequest) returns (Response) {}
  // 发送DTMF
  rpc SendDTMF(SendDTMFRequest) returns (Response) {}
  // 发送SIP INFO
  rpc SendINFO(SendINFORequest) returns (Response) {}
  // 执行原生APP
  rpc NativeApp(NativeRequest) returns (NativeResponse) {}
  // 执行原生API
  rpc NativeAPI(NativeRequest) returns (NativeResponse) {}
  // 执行原生JSAPI
  rpc NativeJSAPI(NativeJSRequest) returns (NativeJSResponse) {}
  // 状态
  rpc JStatus(JStatusRequest) returns (JStatusResponse) {}
  // 获取会议信息
  rpc ConferenceInfo(ConferenceInfoRequest) returns (ConferenceInfoResponse) {}

  //呼叫中心FIFO队列（先入先出）
  rpc FIFO(FIFORequest) returns (FIFOResponse) {}

  //呼叫中心Callcenter
  rpc Callcenter(CallcenterRequest) returns (CallcenterResponse) {}

}

message AcceptRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  bool takeover = 3;
}

message NativeRequest {
  string ctrl_uuid = 1;
  string cmd = 2;
  string args = 3;
  string uuid = 4;
}

message NativeResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  string data = 4;
  string result = 5;
}

message NativeJSRequestData {
  string command = 1;
  // a string or a native JSON struct to google.protobuf.Any or .Struct
  string data = 2;
}

message NativeJSRequest {
  string ctrl_uuid = 1;
  NativeJSRequestData data = 2;
}

message NativeJSResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  string seq = 4;
  string data = 5;
}

message Request {
  string ctrl_uuid = 1;
  string uuid = 2;
}

message Response {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  // optional
  string uuid = 4;
}

message Application {
  string app = 1;
  string data = 2;
}

message DialRequest {
  string ctrl_uuid = 1;
  Destination destination = 2;
  repeated Application apps = 3;
}

message DialResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  string uuid = 4;
  string cause = 5;
}

message BridgeRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  string ringback = 3;
  /* NONE | CALLER | CALLEE | ANY */
  string flow_control = 4;
  /* true | false | comma separated freeswitch causes e.g. USER_BUSY,NO_ANSWER */
  string continue_on_fail = 5;
  Destination destination = 6;
}

message ChannelBridgeRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  string peer_uuid = 3;
  int32 bridge_delay = 4;
  /* NONE | CALLER | CALLEE | ANY */
  string flow_control = 5;
}

enum MediaType {
  FILE = 0;
  TEXT = 1;
  SSML = 2;
}

message Media {
  /* FILE TEXT SSML */
  string type = 1;
  string data = 2;

  string engine = 3;
  string voice = 4;
  uint32 loop = 5;
  uint32 offset = 6;
}

message PlayRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  Media media = 3;
}

message StopRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
}

message BroadcastRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  Media media = 3;
  // BOTH, ALEG, BLEG, AHOLDB, BHOLDA
  string option = 4;
}

message MuteRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  // WRITE, READ, BOTH
  string direction = 3;
  int32 level = 4;
  // FIRST, LAST
  string flag = 5;
}

message RecordRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  string path = 3;
  enum RecordAction {
    // block sync recording
    RECORD = 0;
    // unblock async recording
    START = 1;
    STOP = 2;
    MASK = 3;
    UNMASK = 4;
  }
  // all params are optional
  string action = 4;
  uint32 limit = 5;
  // play a beep before record
  // "default" or TGML https://freeswitch.org/confluence/display/FREESWITCH/TGML
  string beep = 6;
  string terminators = 7;
  uint32 silence_seconds = 8;
  // VAD threshold, 0 is disabled, 1~10000
  uint32 thresh = 9;
  // valid rates are 8000, 16000, 22050, 24000, 32000, 44100, 48000
  uint32 rate = 10;
}

message RecordResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  // if terminated by DTMF
  string terminator = 4;
  // mirror back of the path
  string path = 5;
}

message HangupRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  /* NORMAL_CLEARING USER_BUSY CALL_REJECTED ... */
  string cause = 3;
  enum HangupFlag {
    SELF = 0;
    PEER = 1;
    BOTH = 2;
  }
  HangupFlag flag = 4;
}

message TransferRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  string extension = 3;
  string dialplan = 4;
  string context = 5;
}

message ThreeWayRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  string target_uuid = 3;
  /* LISTEN ABC AC BC TOA TOB STOP */
  string direction = 4;
}

message Echo2Request {
  string ctrl_uuid = 1;
  string uuid = 2;
  /* START | STOP */
  string action = 3;
  /* SELF | OTHER */
  string direction = 4;
}

message InterceptRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  string target_uuid = 3;
}

message ConsultRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  Destination destination = 3;
}

/*
enum Method {
  Invalid = 0;
  // 节点注册
  NodeRegister = 1;
  // 节点离线
  NodeUnregister = 2;
  // 节点数据更新
  NodeUpdate = 3;

  // 通道
  Channel = 4;
  // FreeSWITCH原生消息
  Native = 5;

  // old VCC event
  Vcc = 6;
  // 如果API请求有后续事件
  Result = 7;
  //　异步Dial结果
  DialResult = 8;
  // NativeAPI结果
  NativeResult = 9;

  // 获取配置信息
  FetchXML = 10;
  // 获取Dialplan
  Dialplan = 11;

  // 话机消息
  NativeEvent = 12;

  // 话单
  CDR = 13;
}
*/
message RecordEvent {
  string node_uuid = 1;
  string uuid = 2;
  /* START STOP */
  string action = 3;
  string path = 4;
  uint32 size = 5;
  uint32 samples = 6;
  uint32 record_ms = 7;
  /* success-silence */
  string completion_cause = 8;
}

message Node {
  string uuid = 1;
  string name = 2;
  string ip = 3;
  string version = 4;
  uint32 rack = 5;
  string address = 6;
  // 启动以来秒数
  uint32 uptime = 7;
  // 当前Session数
  uint32 sessions = 8;
  // Session最大阈值
  uint32 sessions_max = 9;
  // 每秒Session最大阈值
  uint32 sps_max = 10;
  // 最后一秒的Session数
  uint32 sps_last = 11;
  // 最后5分钟每秒的Session均值
  uint32 sps_last_5min = 12;
  // 开机以来的Session数
  uint32 sessions_since_startup = 13;
  // 5分钟Session最大值
  uint32 session_peak_5min = 14;
  // 历史Session最大值
  uint32 session_peak_max = 15;
}

message Ctrl {
  string uuid = 1;
  string name = 2;
  string ip = 3;
  string version = 4;
  uint32 rack = 5;
  string address = 6;
}

message ChannelEvent {
  string node_uuid = 1;
  string uuid = 2;
  string peer_uuid = 3;
  // call direction inbound |outbound
  string direction = 4;
  // START RINGING ANSWERED ACTIVE DESTROY READY ...
  string state = 5;
  string cid_name = 6;
  string cid_number = 7;
  string dest_number = 8;
  uint32 create_epoch = 9;
  uint32 ring_epoch = 10;
  uint32 answer_epoch = 11;
  uint32 hangup_epoch = 12;

  // list of uuids
  repeated string peers = 13;
  map<string, string> params = 14;

  string billsec = 15;
  string duration = 16;
  string cause = 17;
  bool answered = 19;
  string node_ip = 20;
  string domain = 21;
}

message CallParam {
  string uuid = 1;
  string cid_name = 2;
  string cid_number = 3;
  string dest_number = 4;
  string dial_string = 5;
  uint32 timeout = 6;
  uint32 max_duration = 7;
  map<string, string> params = 8;
}

message Destination {
  bool ringall = 1;
  map<string, string> global_params = 2;
  repeated CallParam call_params = 3;
  repeated string channel_params = 4;
}

/*
    dialstring:

    user/1000
    sofia/gateway/gw/1000
    sofia/default/1000@ip:port

API

{
  "jsonrpc": "2.0",
  "id": "request-uuid",
  "method": "Xswitch.dial",
  "params": {
    "ctrl": {
      "uuid": "uuid"
    },
    "destination": {
      "ringall": true
      "global_params": {
        "ignore_early_media": "true -- must be a string",
        "caller_id_number": "110"
      },
      "call_params": [{
          "uuid": "uuid",
          "cid_number": "7777",
          "dial_string" = "user/1000"
      }, {
          "uuid": "uuid"
          "dial_string" = "sofia/gateway/test/1000",
          "params": {
              "leg_timeout": "20 -- must be a string",
              "ignore_early_media": "true"
          }
      }]
    }
  }
}

*/

message SetVarRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  map<string, string> data = 3;
}

message GetVarRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  repeated string data = 3;
}

message VarResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  // optional
  string uuid = 4;
  map<string, string> data = 5;
}

message GetStateRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
}

message StateResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  string uuid = 4;
  string channel_state = 5;
  string call_state = 6;
  string answer_state = 7;
  bool bridged = 8;
  bool answered = 9;
  bool hold = 10;
  bool video = 11;
  bool video_ready = 12;
  bool controlled = 13;
  bool ready = 14;
  bool up = 15;
}

message GetChannelDataRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  // optional JSON(default) JSONSTR XML TXT LIST
  string format = 3;
}

message ChannelDataResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  // optional
  string uuid = 4;
  string format = 5;
  // when format == JSON
  ChannelData data = 6;
}
message ChannelData{
  string variable_cc_queue = 1;
  string variable_cc_queue_name = 2;
  string variable_cc_agent_session_uuid = 3;
  string variable_cc_member_uuid = 4;
  string variable_xcc_origin_dest_number = 5;

}

message DTMFRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  // optional default = 1
  uint32 min_digits = 3;
  // optional default = 1
  uint32 max_digits = 4;
  // optiona default = 5000ms
  uint32 timeout = 5;
  // optional default = 2000ms
  uint32 digit_timeout = 6;
  // optional default none, can be 0-9,*,#
  string terminators = 7;
  // play or tts
  Media media = 8;
  // not implemented yet
  uint32 max_tries = 9;
  string regex = 10;
  // invalid  meida
  Media media_invalid = 11;
  // default false
  bool play_last_invalid_prompt = 12;
}

message DTMFResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  // optional
  string uuid = 4;
  string dtmf = 5;
  // optional
  string terminator = 6;
}

message DigitsRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  // optional default = 1
  uint32 min_digits = 3;
  // optional default = 1
  uint32 max_digits = 4;
  // optiona default = 5000ms
  uint32 timeout = 5;
  // optional default = 2000ms
  uint32 digit_timeout = 6;
  // optional default none, can be 0-9,*,#
  string terminators = 7;
  // play or tts
  Media media = 8;
  // not implemented yet
  uint32 max_tries = 9;
  string regex = 10;
  // invalid  meida
  Media media_invalid = 11;
  // default false
  bool play_last_invalid_prompt = 12;
}

message DigitsResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  // optional
  string uuid = 4;
  string dtmf = 5;
  // optional
  string terminator = 6;
}

message SpeechRequest {
  string ctrl_uuid = 1;
  string engine = 2;
  uint32 no_input_timeout = 3;
  uint32 speech_timeout = 4;
  bool partial_events = 5;
  bool disable_detected_data_event = 6;
  map<string, string> params = 7;
  string grammar = 8;
  uint32 max_speech_timeout = 9;
}

message DetectRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  // oneof play or tts
  Media media = 3;
  // detect dtmf too, optional
  DTMFRequest dtmf = 4;
  // speech params, mandatory
  SpeechRequest speech = 5;
}

message DetectedData {
  string dtmf = 1;
  string terminator = 2;
  string text = 3;
  double confidence = 4;
  bool is_final = 5; // final or partial result
  // when error
  string error = 6;
  // DTMF Speech.Begin Speech.Partial Speech.End ERROR */
  string type = 7;
  // the ASR engine
  string engine = 8;
  // string or JSON Struct, detailed object returned from ASR engine
  EngineData engine_data = 9;
  uint32 offset = 10;
}

message EngineData {
  Header header = 1;
  Payload payload = 2;
}

message Header {
  string namespace = 1;
  string name = 2;
  double status = 3;
  string message_id = 4;
  string task_id = 5;
  string status_text = 6;
}

message Payload  {
  double index = 1;
  double time = 2;
  string result = 3;
  double confidence = 4;
  repeated string words = 5;
  double status = 6;
  string gender = 7;
  double begin_time = 8;
  StashResult stash_result = 9;
  string audio_extra_info = 10;
  string sentence_id = 11;
  double gender_score = 12;
}

message StashResult {
  double sentenceId = 1;
  double beginTime = 2;
  string text = 3;
  double currentTime = 4;
  repeated string words = 5;
}

message DetectResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  // optional
  string uuid = 4;
  DetectedData data = 5;
}

message StopDetectRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
}

message RingBackDetectionRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  // optional
  string stop_tone = 3;
  // optional
  string ignore_samples = 4;
  // optional default = true
  bool auto_hangup = 5;
  // optional default = true
  bool answer_auto_stop = 6;
  // optional default = 60
  uint32 max_detect_time = 7;
}

message Action {
  string name = 1;
  string owner_uid = 2;
  string node_uuid = 3;
  CallParam param = 4;
}

message DetectFaceRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  string mask = 3;
  /* START STOP TEXT CLEAR */
  string action = 4;
  // if action == "TEXT"
  string text = 5;
  string font = 6;
  string font_size = 7;
  string fg_color = 8;
  string bg_color = 9;
}

message DetectedFaceEvent {
  string node_uuid = 1;
  string uuid = 2;
  int32 code = 3;
  string message = 4;
  string picture = 5;
  int32 width = 6;
  int32 height = 7;
}

message SendDTMFRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  string dtmf = 3;
}

message SendINFORequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  string content_type = 3;
  string data = 4;
}

message HoldRequest {
  string ctrl_uuid = 1;
  string uuid = 2;
  /* ON OFF TOGGLE */
  string action = 3;
  /* OPTIONAL only supported by some phones*/
  string display = 4;
}

message VideoResizeEvent {
  string node_uuid = 1;
  string uuid = 2;
  uint32 old_width = 3;
  uint32 old_height = 4;
  uint32 new_width = 5;
  uint32 new_height = 6;
}

message JStatusRequest {
  string ctrl_uuid = 1;
  message JStatusData {
    string command = 1;
    string data = 2;
  }
  JStatusData data = 2;
}

message JStatusUptime {
  int32 years = 1;
  int32 days = 2;
  int32 hours = 3;
  int32 minutes = 4;
  int32 seconds = 5;
  int32 milliseconds = 6;
  int32 microseconds = 7;
}

message JStatusSessionsCount {
  int32 total = 1;
  int32 active = 2;
  int32 peak = 3;
  int32 peak5Min = 4;
  int32 limit = 5;
}

message JStatusSessionsRate {
  int32 current = 1;
  int32 max = 2;
  int32 peak = 3;
  int32 peak5Min = 4;
}

message JStatusSessions {
  JStatusSessionsCount count = 1;
  JStatusSessionsRate rate = 2;

}

message JStatusIdleCPU {
  float used = 1;
  float allowed = 2;
}

message JStatusStackSize {
  int32 current = 1;
  int32 max = 2;
}

message JStatusResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  string seq = 4;
  JStatusResponseData data = 5;
}

message JStatusResponseData {
  string systemStatus = 1;
  string version = 2;
  JStatusUptime uptime = 3;
  JStatusSessions sessions = 4;
  JStatusIdleCPU idleCPU = 5;
  JStatusStackSize stackSizeKB = 6;
}

message ConferenceInfoRequestDataData {
  string conferenceName = 1;
  bool showMembers = 2;
  map<string, string> memberFilters = 3;
}

message ConferenceInfoRequestData {
  string command = 1;
  ConferenceInfoRequestDataData data = 2;
}

message ConferenceInfoRequest {
  string ctrl_uuid = 1;
  ConferenceInfoRequestData data = 2;
}

message ConferenceInfoResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  // optional
  string seq = 4;
  ConferenceInfoResponseData data = 5;
}

message ConferenceInfoResponseData {
  ConferenceInfoResponseConference conference = 1;
}

message ConferenceInfoResponseConference {
  string conference_name = 1;
  int32 member_count = 2;
  int32 ghost_count = 3;
  int32 rate = 4;
  int32 run_time = 5;
  string conference_uuid = 6;
  int32 canvas_count = 7;
  int32 max_bw_in = 8;
  int32 force_bw_in = 9;
  int32 video_floor_packets = 10;
  bool locked = 11;
  bool destruct = 12;
  bool wait_mod = 13;
  bool audio_always = 14;
  bool running = 15;
  bool answered = 16;
  bool enforce_min = 17;
  bool bridge_to = 18;
  bool dynamic = 19;
  bool exit_sound = 20;
  bool enter_sound = 21;
  bool recording = 22;
  bool video_bridge = 23;
  bool video_floor_only = 24;
  bool video_rfc4579 = 25;
  ConferenceInfoResponseVariables variables = 26;
  repeated ConferenceInfoResponseMembers members = 27;
}

message ConferenceInfoResponseVariables {
}

message ConferenceInfoResponseMembers {
  string type = 1;
  int32 id = 2;
  string uuid = 3;
  string caller_id_name = 4;
  string caller_id_number = 5;
  int32 join_time = 6;
  int32 last_talking = 7;
  int32 energy = 8;
  int32 volume_in = 9;
  int32 volume_out = 10;
  int32 output_volume = 11;
  int32 input_volume = 12;
  ConferenceInfoResponseFlags flags = 13;
}

message ConferenceInfoResponseFlags {
  bool can_hear = 1;
  bool can_see = 2;
  bool can_speak = 3;
  bool hold = 4;
  bool mute_detect = 5;
  bool talking = 6;
  bool has_video = 7;
  bool video_bridge = 8;
  bool has_floor = 9;
  bool is_moderator = 10;
  bool end_conference = 11;
}
message FIFORequest {
  string uuid = 1;
  string name = 2;
  string  inout = 3;
  string wait_music = 4;
  string exit_announce = 5;
  int32 priority = 6;
}
message FIFOResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  string uuid = 4;
}

message CallcenterRequest {
  string uuid = 1;
  string name = 2;
}
message CallcenterResponse {
  int32 code = 1;
  string message = 2;
  string node_uuid = 3;
  string uuid = 4;
}